--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -35,23 +35,33 @@ V0000
 [%] Удаляем долетевшие флоты (флоты с отрицательным временем подлета). И метал<0
 [%] Пофикшен баг, не дававший удалить альянс
 [@] Теперь по клику на координатах участника альянса работает переход в его систему
+[~] Корректное отображение количества ползователей
 
+[?] Не работает константа HIDE_1st_FROM_STATS - должна скрывать юзера 1 (админов?)
+[?] Автоматическое обновление статистики (с обновлением количества пользователей)
+[?] Интерфейс: informations.php - выводить информацию о сервере: скорости итд
 [?] Боевка: Унификация боевого движка с движком уничтожения луны
-[?] Корректное отображение количества ползователей
+[?] Движок: fleetback.php -> fleet.php
+[?] Движок: infos.php - разбить на подпроцедуры
+[?] Движок: fleet.php - разбить на подпроцедуры
+[?] Интерфейс: вынести в меню ссылку на fleetshortcuts.php
+[?] Интерфейс, RPG: Make empire work only with Emperor
+[?] Интерфейс: отдельная таблица для текстовых материалов с поддержкой BBCode
+[?] Интерфейс: credit.php
+[?] Интерфейс: darkmatter.php - templatize!
+[?] Интерфейс: cahngelog.php - add changelogs
+[?] Интерфейс: Капча - captcha.php
+[?] Код сохранения конфигурации
+[?] Поддержка xCache для конфигурации
 [?] using phpBB3 standalone template engine from
     http://www.phpbb.com/community/viewtopic.php?f=71&t=1557455
     http://wiki.phpbb.com/display/MODDOCS/Tutorial.Template+syntax
-
 [?] using phpBB3 for everything (^_^) - custom page
     http://www.phpbb.com/kb/article/add-a-new-custom-page-to-phpbb/
     looks like updated version of upper page:
     http://wiki.phpbb.com/display/MODDOCS/Practical.Add+custom+page
 [?] using php 5.0+ embedded Database Object
     http://ua2.php.net/manual/en/pdo.connections.php
-
-[?] Автоматическое обновление статистики (с обновлением количества пользователей)
-[?] Код сохранения конфигурации
-[?] Поддержка xCache для конфигурации
 [?] Модуль "черного рынка"
 [?] Поддержка мультивселенных
 [?] Скин для ПДА
