Checked PHP files in includes and includes/functions to safely work with $_GET and $_POST. Also removed some unused files

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -35,11 +35,28 @@ V0000
 [%] Удаляем долетевшие флоты (флоты с отрицательным временем подлета). И метал<0
 [%] Пофикшен баг, не дававший удалить альянс
 [@] Теперь по клику на координатах участника альянса работает переход в его систему
-[~] Корректное отображение количества ползователей
+[~] Корректное отображение количества пользователей
+[~] Интерфейс: Переработана система генерации баннеров/юзербаров. Унифицированы
+    процедуры построения, слиты в  один  файл  процедур  и  один  файл-враппер,
+    вынесены PHP-файлы из каталога scripts в соответствующие места
+[~] Почищен корневой каталог - все неиспользуемые файлы убраны
+[~] Изменены темлейты страницы регистрации и логина
+[~] Движок:  проверил  файлы  в  каталогах  includes  и  includes/functions  на
+    наличие SQL-injection через методы $_GET и $_POST
 
+[?] Движок: functions/PadaGalaxy.php - пересмотреть код
+[?] Движок: объединить DefensesBuildingPage.php и FleetBuildingPage.php
+[?] Движок: закрыть дыры в каталоге admin
+[?] Движок: закрыть дыры в каталоге db
+[?] Движок: закрыть дыры в корневом каталоге
 [?] Не работает константа HIDE_1st_FROM_STATS - должна скрывать юзера 1 (админов?)
 [?] Автоматическое обновление статистики (с обновлением количества пользователей)
 [?] Интерфейс: informations.php - выводить информацию о сервере: скорости итд
+[?] Движок: Почистить каталог language
+[?] Движок: Почистить каталог scripts
+[?] Движок: Почистить каталог templates
+[?] Движок: Почистить каталог js
+[?] Движок: Почистить каталог includes
 [?] Боевка: Унификация боевого движка с движком уничтожения луны
 [?] Движок: fleetback.php -> fleet.php
 [?] Движок: infos.php - разбить на подпроцедуры
