--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,63 +1,77 @@
 Обозначения
 ===========
- [!] Краткая аннотация
+ [!] Важные нововведения
  [+] Добавлено
  [-] Убрано
  [~] Изменено
- [@] Фичи
+ [@] Фичи - небольшие усовершенствования, в основном интерфейсные
  [%] Исправлено
  [?] ToDo
 
 V0000
 [!] Начальная версия. Базируется на XNova RageRepack v.226
-[!] Боевка: Рабочие САБы - полностью переписан код
-[!] Боевка: Новая версия боевого движка
-[!] Интерфейс: Полноценный модуль новостей
+[!] Боевка: альтернативная версия боевого движка - рабочие САБы, новая  система
+    расчета боя,  унифицированный  код  между  боевым  движком  и  симулятором,
+    частичный возврат ресурсов от обороны оптимизированый код итд. Подробнее  -
+    см. readme.txt
 [!] Ролевая система: Переписана система начисления опыта/ТМ
+[!] Модули: Полноценный модуль новостей
+[!] Модули: Модуль Google AdSense (слева внизу под меню, плашка 125х125)
 
-[+] Интерфейс: Плагин GoogleCode (слева внизу под меню, плашка 125х125)
-[+] Интерфейс: Показывает боевые статы корабля/флота на странице строительства
-[~] Админка: бан/разбан - переписан код. Добавлена возможность включить РО  при
-    бане. При разбане режим РО остается, но разрешается из него выйти
+[+] Админка/Баннерилка: Полностью переписан код. Добавлена возможность включить
+    РО при бане. При разбане режим РО остается, но разрешается  из  него  выйти
+[+] Админка/ТМ: с нуля написана страница добавления/удаления  ТМ  пользователям
 
-[+] Добавлена очередь ангара на страницу обзора
-
-[~] Переработана страница "обзора"
+[@] Интерфейс/Обзор: Переработана страница "Обзор планеты"
   1. По умолчанию статистика игрока теперь всегда видна
   2. Очки/Рейды теперь пишутся в две колонки, а не в отдельные таблицы, как раньше
   3. Подробности о планете теперь сворачиваются/разворачиваются
   4. Статус строительства и исследований перенесен под флоты
   5. Исправил ошибку - были поменяны местами метки для Опыта и Уровня Экономики
   6. Количество занятых и свободных секторов вынес на индикатор заполненности планеты
+  7. Добавлена очередь ангара на страницу обзора
   В целом, экран обзора стал компактнее и информативнее
+[@] Интерфейс/Строительство: На  странице  строительства  выдны  боевые  данные
+    кораблей и обороны
+[@] Интерфейс/Альянсы:  Теперь  по  клику  на  координатах  участника  альянса
+    работает переход в его систему
 
 [~] fleet.php: Поправлено использование имен переменных в запросах
-[%] Удаляем долетевшие флоты (флоты с отрицательным временем подлета). И метал<0
-[%] Пофикшен баг, не дававший удалить альянс
-[@] Теперь по клику на координатах участника альянса работает переход в его систему
 [~] Корректное отображение количества пользователей
 [~] Интерфейс: Переработана система генерации баннеров/юзербаров. Унифицированы
     процедуры построения, слиты в  один  файл  процедур  и  один  файл-враппер,
     вынесены PHP-файлы из каталога scripts в соответствующие места
 [~] Почищен корневой каталог - все неиспользуемые файлы убраны
 [~] Изменены темлейты страницы регистрации и логина
-[~] Движок:  проверил  файлы  в  каталогах  includes  и  includes/functions  на
-    наличие SQL-injection через методы $_GET и $_POST
+[~] Движок/Безопасность:   проверил   файлы   в    каталогах    includes    и
+    includes/functions на наличие  SQL-injection  через  глобальные  переменные
+    $_GET и $_POST
+[~] Движок/Безопасность: проверил файлы в каталоге db на наличие  SQL-injection
+    через глобальные переменные $_GET и $_POST
+[~] Движок/Безопасность:  проверил  файлы  в   каталоге   admin   на   наличие
+    SQL-injection  через глобальные переменные $_GET
 
+[%] Удаляем долетевшие флоты (флоты с отрицательным временем подлета). И метал<0
+[%] Пофикшен баг, не дававший удалить альянс
+[%] Множество мелких багфиксов и исправлений
+
+[?] Движок: проверить файлы в каталоге admin  на  наличие  SQL-injection  через
+    глобальные переменные $_POST
+[?] Движок: закрыть дыры в корневом каталоге
+[?] Автоматическое обновление статистики (с обновлением количества пользователей)
+[?] Боевка: Унификация боевого движка с движком уничтожения луны
+
+V?
+[?] Интерфейс: позаменять везде 'd/m/Y h:i:s' на прописанное в конфиге
 [?] Движок: functions/PadaGalaxy.php - пересмотреть код
 [?] Движок: объединить DefensesBuildingPage.php и FleetBuildingPage.php
-[?] Движок: закрыть дыры в каталоге admin
-[?] Движок: закрыть дыры в каталоге db
-[?] Движок: закрыть дыры в корневом каталоге
 [?] Не работает константа HIDE_1st_FROM_STATS - должна скрывать юзера 1 (админов?)
-[?] Автоматическое обновление статистики (с обновлением количества пользователей)
 [?] Интерфейс: informations.php - выводить информацию о сервере: скорости итд
 [?] Движок: Почистить каталог language
 [?] Движок: Почистить каталог scripts
 [?] Движок: Почистить каталог templates
 [?] Движок: Почистить каталог js
 [?] Движок: Почистить каталог includes
-[?] Боевка: Унификация боевого движка с движком уничтожения луны
 [?] Движок: fleetback.php -> fleet.php
 [?] Движок: infos.php - разбить на подпроцедуры
 [?] Движок: fleet.php - разбить на подпроцедуры
