Now you can share links to simulation results

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,8 +12,8 @@ V0000
 [!] Начальная версия. Базируется на XNova RageRepack v.226
 [!] Боевка: альтернативная версия боевого движка - рабочие САБы, новая  система
     расчета боя,  унифицированный  код  между  боевым  движком  и  симулятором,
-    частичный возврат ресурсов от обороны оптимизированый код итд. Подробнее  -
-    см. readme.txt
+    частичный возврат ресурсов от обороны оптимизированый код итд. Кроме  того,
+    можно давать ссылки на результаты симулятора! Подробнее  -  см.  readme.txt
 [!] Ролевая система: Переписана система начисления опыта/ТМ
 [!] Модули: Полноценный модуль новостей
 [!] Модули: Модуль Google AdSense (слева внизу под меню, плашка 125х125)
