Reflect last changes in changelog.txt

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -21,6 +21,9 @@ V0000
 [+] Админка/Баннерилка: Полностью переписан код. Добавлена возможность включить
     РО при бане. При разбане режим РО остается, но разрешается  из  него  выйти
 [+] Админка/ТМ: с нуля написана страница добавления/удаления  ТМ  пользователям
+[+] Интерфейс/Почта: Оптимизированы запросы к БД. Добавлены индексы  к  таблице
+    messages. Добавлена возможность просмотра  отправленных  сообщений  (только
+    тех, которые не удалил адресат)
 
 [@] Интерфейс/Обзор: Переработана страница "Обзор планеты"
   1. По умолчанию статистика игрока теперь всегда видна
@@ -75,7 +78,7 @@ V?
 [?] Движок: Почистить каталог includes
 [?] Движок: fleetback.php -> fleet.php
 [?] Движок: infos.php - разбить на подпроцедуры
-[?] Движок: fleet.php - разбить на подпроцедуры
+[?] Движок: fleet.php - разбить на подпроцедуры или переписать
 [?] Интерфейс: вынести в меню ссылку на fleetshortcuts.php
 [?] Интерфейс, RPG: Make empire work only with Emperor
 [?] Интерфейс: отдельная таблица для текстовых материалов с поддержкой BBCode
