Fixes typo in changelog.txt

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -34,7 +34,7 @@ V0000
   6. Количество занятых и свободных секторов вынес на индикатор заполненности планеты
   7. Добавлена очередь ангара на страницу обзора
   В целом, экран обзора стал компактнее и информативнее
-[@] Интерфейс/Строительство: На  странице  строительства  выдны  боевые  данные
+[@] Интерфейс/Строительство: На  странице  строительства  видны  боевые  данные
     кораблей и обороны
 [@] Интерфейс/Альянсы:  Теперь  по  клику  на  координатах  участника  альянса
     работает переход в его систему
