Code optimization in MissionCaseAttack & some unification with MissinCaseDestroy

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -63,8 +63,14 @@ V0000
     глобальные переменные $_POST
 [?] Движок: закрыть дыры в корневом каталоге
 [?] Автоматическое обновление статистики (с обновлением количества пользователей)
+[?] Разобраться в менеджере и подпроцедурах управления флотами, что бы избежать
+    двойных проверок.  Возврат  флотов  должен  производиться  исключительно  в
+    менеджере флотов. Там же так же исключительно должны производиться проверки
+    на то, следует ли передавать флот дальше в подпроцедуры обработки
 
 V?
+[?] Черный рынок: Банкир  и  Ростовщик.  Банкир  позволяет  вложить  денег  под
+    отрицательный процент. Ростовщик - занять денег.
 [?] Интерфейс: позаменять везде 'd/m/Y h:i:s' на прописанное в конфиге
 [?] Движок: functions/PadaGalaxy.php - пересмотреть код
 [?] Движок: alliance.php - переписать!
