UBEv3 - unification of combar engines - simulator, attack calcs and moon destruction

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,9 +11,10 @@
 V0000
 [!] Начальная версия. Базируется на XNova RageRepack v.226
 [!] Боевка: альтернативная версия боевого движка - рабочие САБы, новая  система
-    расчета боя,  унифицированный  код  между  боевым  движком  и  симулятором,
-    частичный возврат ресурсов от обороны оптимизированый код итд. Кроме  того,
-    можно давать ссылки на результаты симулятора! Подробнее  -  см.  readme.txt
+    расчета боя, унифицированный код между обсчетом боя,  уничтожением  луны  и
+    симулятором, частичный возврат ресурсов от обороны оптимизированый код итд.
+    Кроме того, можно давать ссылки на результаты симулятора! Подробнее  -  см.
+    readme.txt
 [!] Ролевая система: Переписана система начисления опыта/ТМ
 [!] Модули: Полноценный модуль новостей
 [!] Модули: Модуль Google AdSense (слева внизу под меню, плашка 125х125)
@@ -38,6 +39,8 @@ V0000
     кораблей и обороны
 [@] Интерфейс/Альянсы:  Теперь  по  клику  на  координатах  участника  альянса
     работает переход в его систему
+[@] Интерфейс/Меню: добавлен пункт меню "Закладки" - ссылка на fleetshortcuts.php
+[@] Другие усовершенствования
 
 [~] fleet.php: Поправлено использование имен переменных в запросах
 [~] Корректное отображение количества пользователей
@@ -53,22 +56,25 @@ V0000
     через глобальные переменные $_GET и $_POST
 [~] Движок/Безопасность:  проверил  файлы  в   каталоге   admin   на   наличие
     SQL-injection  через глобальные переменные $_GET
+[~] Другие изменения в движке
 
 [%] Удаляем долетевшие флоты (флоты с отрицательным временем подлета). И метал<0
 [%] Пофикшен баг, не дававший удалить альянс
 [%] Множество мелких багфиксов и исправлений
 
-[?] Боевка: Унификация боевого движка с движком уничтожения луны
+[?] Автоматическое обновление статистики
 [?] Движок: проверить файлы в каталоге admin  на  наличие  SQL-injection  через
     глобальные переменные $_POST
 [?] Движок: закрыть дыры в корневом каталоге
-[?] Автоматическое обновление статистики (с обновлением количества пользователей)
+
+V?
 [?] Разобраться в менеджере и подпроцедурах управления флотами, что бы избежать
     двойных проверок.  Возврат  флотов  должен  производиться  исключительно  в
     менеджере флотов. Там же так же исключительно должны производиться проверки
     на то, следует ли передавать флот дальше в подпроцедуры обработки
-
-V?
+[?] BE_attackFleetFill.php: Нужна ли полная информация о флотах?
+[?] Интерфейс: informations.php - выводить информацию о сервере: скорости итд
+[?] Модуль "черного рынка"
 [?] Черный рынок: Банкир  и  Ростовщик.  Банкир  позволяет  вложить  денег  под
     отрицательный процент. Ростовщик - занять денег.
 [?] Интерфейс: позаменять везде 'd/m/Y h:i:s' на прописанное в конфиге
@@ -76,7 +82,6 @@ V?
 [?] Движок: alliance.php - переписать!
 [?] Движок: объединить DefensesBuildingPage.php и FleetBuildingPage.php
 [?] Не работает константа HIDE_1st_FROM_STATS - должна скрывать юзера 1 (админов?)
-[?] Интерфейс: informations.php - выводить информацию о сервере: скорости итд
 [?] Движок: Почистить каталог language
 [?] Движок: Почистить каталог scripts
 [?] Движок: Почистить каталог templates
@@ -85,7 +90,6 @@ V?
 [?] Движок: fleetback.php -> fleet.php
 [?] Движок: infos.php - разбить на подпроцедуры
 [?] Движок: fleet.php - разбить на подпроцедуры или переписать
-[?] Интерфейс: вынести в меню ссылку на fleetshortcuts.php
 [?] Интерфейс, RPG: Make empire work only with Emperor
 [?] Интерфейс: отдельная таблица для текстовых материалов с поддержкой BBCode
 [?] Интерфейс: credit.php
@@ -103,7 +107,6 @@ V?
     http://wiki.phpbb.com/display/MODDOCS/Practical.Add+custom+page
 [?] using php 5.0+ embedded Database Object
     http://ua2.php.net/manual/en/pdo.connections.php
-[?] Модуль "черного рынка"
 [?] Поддержка мультивселенных
 [?] Скин для ПДА
 [?] Интеграция с phpBB3
