--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -68,6 +68,11 @@ V0000
 [?] Движок: закрыть дыры в корневом каталоге
 
 V?
+[?] Интерфейс: Капча - captcha.php
+[?] Код сохранения конфигурации
+[?] Поддержка xCache для конфигурации
+[?] Боевка: Движок совместимый с oGame (скорострел)
+[?] Переработать систему оружия и боя: ракеты, кинетическое, энергетическое
 [?] Разобраться в менеджере и подпроцедурах управления флотами, что бы избежать
     двойных проверок.  Возврат  флотов  должен  производиться  исключительно  в
     менеджере флотов. Там же так же исключительно должны производиться проверки
@@ -77,6 +82,9 @@ V?
 [?] Модуль "черного рынка"
 [?] Черный рынок: Банкир  и  Ростовщик.  Банкир  позволяет  вложить  денег  под
     отрицательный процент. Ростовщик - занять денег.
+[?] Перки
+[?] Расы
+[?] Темная Энергия и Артефакты
 [?] Интерфейс: позаменять везде 'd/m/Y h:i:s' на прописанное в конфиге
 [?] Движок: functions/PadaGalaxy.php - пересмотреть код
 [?] Движок: alliance.php - переписать!
@@ -94,10 +102,7 @@ V?
 [?] Интерфейс: отдельная таблица для текстовых материалов с поддержкой BBCode
 [?] Интерфейс: credit.php
 [?] Интерфейс: darkmatter.php - templatize!
-[?] Интерфейс: cahngelog.php - add changelogs
-[?] Интерфейс: Капча - captcha.php
-[?] Код сохранения конфигурации
-[?] Поддержка xCache для конфигурации
+[?] Интерфейс: changelog.php - add changelogs
 [?] using phpBB3 standalone template engine from
     http://www.phpbb.com/community/viewtopic.php?f=71&t=1557455
     http://wiki.phpbb.com/display/MODDOCS/Tutorial.Template+syntax
