--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -25,6 +25,9 @@ V0000
 [+] Интерфейс/Почта: Оптимизированы запросы к БД. Добавлены индексы  к  таблице
     messages. Добавлена возможность просмотра  отправленных  сообщений  (только
     тех, которые не удалил адресат)
+[+] Интерфейс: Переработана система генерации баннеров/юзербаров. Унифицированы
+    процедуры построения, слиты в  один  файл  процедур  и  один  файл-враппер,
+    вынесены PHP-файлы из каталога scripts в соответствующие места
 
 [@] Интерфейс/Обзор: Переработана страница "Обзор планеты"
   1. По умолчанию статистика игрока теперь всегда видна
@@ -40,15 +43,14 @@ V0000
 [@] Интерфейс/Альянсы:  Теперь  по  клику  на  координатах  участника  альянса
     работает переход в его систему
 [@] Интерфейс/Меню: добавлен пункт меню "Закладки" - ссылка на fleetshortcuts.php
+[@] Чат: сообщения админа теперь выделяются пурпурным цветом, что  бы  выделить
+    их среди сообщений обычных пользователей
+[@] Интерфейс: Изменены темплейты страницы регистрации и логина
 [@] Другие усовершенствования
 
 [~] fleet.php: Поправлено использование имен переменных в запросах
-[~] Корректное отображение количества пользователей
-[~] Интерфейс: Переработана система генерации баннеров/юзербаров. Унифицированы
-    процедуры построения, слиты в  один  файл  процедур  и  один  файл-враппер,
-    вынесены PHP-файлы из каталога scripts в соответствующие места
-[~] Почищен корневой каталог - все неиспользуемые файлы убраны
-[~] Изменены темлейты страницы регистрации и логина
+[~] Движок: Корректное отображение количества пользователей
+[~] Движок: Почищен корневой каталог - все неиспользуемые файлы убраны
 [~] Движок/Безопасность:   проверил   файлы   в    каталогах    includes    и
     includes/functions на наличие  SQL-injection  через  глобальные  переменные
     $_GET и $_POST
@@ -56,6 +58,9 @@ V0000
     через глобальные переменные $_GET и $_POST
 [~] Движок/Безопасность:  проверил  файлы  в   каталоге   admin   на   наличие
     SQL-injection  через глобальные переменные $_GET
+[~] Админка/Статистика: Почти полностью переписан модуль обновления статистики.
+    Переписаны запросы. Скорость работы возросла в несколько раз
+[~] Движок/Быстродействие: Поддержка xCache (только в новом коде!)
 [~] Другие изменения в движке
 
 [%] Удаляем долетевшие флоты (флоты с отрицательным временем подлета). И метал<0
@@ -66,10 +71,12 @@ V0000
 [?] Движок: проверить файлы в каталоге admin  на  наличие  SQL-injection  через
     глобальные переменные $_POST
 [?] Движок: закрыть дыры в корневом каталоге
+[?] Код сохранения конфигурации
+[?]  Админка/Список  ошибок:  добавить  листание  -  PHP  умирает  при  большом
+    количестве ошибок - выдает белую страницу
 
 V?
 [?] Интерфейс: Капча - captcha.php
-[?] Код сохранения конфигурации
 [?] Поддержка xCache для конфигурации
 [?] Боевка: Движок совместимый с oGame (скорострел)
 [?] Переработать систему оружия и боя: ракеты, кинетическое, энергетическое
