Optimization: More improved both speed of StatBuilder and StatLister

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -26,7 +26,7 @@ V0000
     messages. Добавлена возможность просмотра  отправленных  сообщений  (только
     тех, которые не удалил адресат)
 [+] Интерфейс: Переработана система генерации баннеров/юзербаров. Унифицированы
-    процедуры построения, слиты в  один  файл  процедур  и  один  файл-враппер,
+    процедуры их генерации, слиты в один файл  процедур  и  один  файл-враппер,
     вынесены PHP-файлы из каталога scripts в соответствующие места
 
 [@] Интерфейс/Обзор: Переработана страница "Обзор планеты"
@@ -63,7 +63,7 @@ V0000
 [~] Движок/Быстродействие: Поддержка xCache (только в новом коде!)
 [~] Другие изменения в движке
 
-[%] Удаляем долетевшие флоты (флоты с отрицательным временем подлета). И метал<0
+[%] Удаляем долетевшие флоты (флоты с отрицательным временем подлета)
 [%] Пофикшен баг, не дававший удалить альянс
 [%] Множество мелких багфиксов и исправлений
 
