Using AJAX for statbuilder. Preparing scheduler.php for autoupdate from users

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -68,6 +68,9 @@ V0000
 [%] Множество мелких багфиксов и исправлений
 
 [?] Автоматическое обновление статистики
+[?] Доработать функцию $debug->warning()
+[?] Экпедиции - поставить зависимость ТМ от емкости трюма кораблей
+[?] Отрицательные ресурсы при отправке флота со страницы галактики
 [?] Движок: проверить файлы в каталоге admin  на  наличие  SQL-injection  через
     глобальные переменные $_POST
 [?] Движок: закрыть дыры в корневом каталоге
