Admin/Errors: Adds backtrace to DB. Ability to view details on certain error

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -22,6 +22,9 @@ V0000
 [+] Админка/Баннерилка: Полностью переписан код. Добавлена возможность включить
     РО при бане. При разбане режим РО остается, но разрешается  из  него  выйти
 [+] Админка/ТМ: с нуля написана страница добавления/удаления  ТМ  пользователям
+[+] Админка/Ошибки: переработан список ошибок. Добавлена возможность  сохранять
+    в таблице ошибок backtrace. Добавлена возможность просматривать подробности
+    о каждой ошибке на отдельной странице
 [+] Интерфейс/Почта: Оптимизированы запросы к БД. Добавлены индексы  к  таблице
     messages. Добавлена возможность просмотра  отправленных  сообщений  (только
     тех, которые не удалил адресат)
@@ -77,10 +80,10 @@ V0000
     глобальные переменные $_POST
 [?] Движок: закрыть дыры в корневом каталоге
 [?] Код сохранения конфигурации
-[?]  Админка/Список  ошибок:  добавить  листание  -  PHP  умирает  при  большом
-    количестве ошибок - выдает белую страницу
 
 V?
+[?]  Админка/Список  ошибок:  добавить  листание  -  PHP  умирает  при  большом
+    количестве ошибок - выдает белую страницу
 [?] Интерфейс: Капча - captcha.php
 [?] Поддержка xCache для конфигурации
 [?] Боевка: Движок совместимый с oGame (скорострел)
@@ -97,6 +100,7 @@ V?
 [?] Перки
 [?] Расы
 [?] Темная Энергия и Артефакты
+[?] Губернаторы + офицеры => наемники
 [?] Интерфейс: позаменять везде 'd/m/Y h:i:s' на прописанное в конфиге
 [?] Движок: functions/PadaGalaxy.php - пересмотреть код
 [?] Движок: alliance.php - переписать!
