Fixing bug with missile launch when none structures selected

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -82,6 +82,7 @@ V0000
 [?] Код сохранения конфигурации
 
 V?
+[?] Кэширование чата (XCache). Сброс 10 последних одним инсертом.
 [?]  Админка/Список  ошибок:  добавить  листание  -  PHP  умирает  при  большом
     количестве ошибок - выдает белую страницу
 [?] Интерфейс: Капча - captcha.php
