--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -83,6 +83,7 @@ V0000
 
 V?
 [?] Кэширование чата (XCache). Сброс 10 последних одним инсертом.
+[?] Чат: Интеграция AJAX Chat
 [?]  Админка/Список  ошибок:  добавить  листание  -  PHP  умирает  при  большом
     количестве ошибок - выдает белую страницу
 [?] Интерфейс: Капча - captcha.php
