--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -82,6 +82,8 @@ V0000
 [?] Код сохранения конфигурации
 
 V?
+[?] Супернова: Удержание на обломках
+[?] Супернова: Сбор ресурсов флотом, если есть разработчики
 [?] Кэширование чата (XCache). Сброс 10 последних одним инсертом.
 [?] Чат: Интеграция AJAX Chat
 [?]  Админка/Список  ошибок:  добавить  листание  -  PHP  умирает  при  большом
