Root files SQL-injections check finished

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -66,6 +66,8 @@ V0000
 [~] Движок/Быстродействие: Поддержка xCache (только в новом коде!)
 [~] Другие изменения в движке
 
+[%] Рынок: Исправлен глюк с потерей ресурсов: если во время  обмена  количество
+    ресурсов на планете изменялось, то оно перезаписывалось результатом обмена
 [%] Удаляем долетевшие флоты (флоты с отрицательным временем подлета)
 [%] Пофикшен баг, не дававший удалить альянс
 [%] Множество мелких багфиксов и исправлений
