Fixes in announce and overview

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -18,6 +18,8 @@ V0000
 [!] Ролевая система: Переписана система начисления опыта/ТМ
 [!] Модули: Полноценный модуль новостей
 [!] Модули: Модуль Google AdSense (слева внизу под меню, плашка 125х125)
+[!] Безопасность: закрыты все обнаруженные дыры в безопасности (SQL-injection
+    через параметры страницы) на страницах, доступных пользователям.
 
 [+] Админка/Баннерилка: Полностью переписан код. Добавлена возможность включить
     РО при бане. При разбане режим РО остается, но разрешается  из  него  выйти
@@ -74,16 +76,15 @@ V0000
 
 [?] Автоматическое обновление статистики
 [?] Доработать функцию $debug->warning()
-[?] Экпедиции - поставить зависимость ТМ от емкости трюма кораблей
 [?] Отрицательные ресурсы при отправке флота со страницы галактики - _errors "Player have negative resources"
 [?] Duplicate Report ID - когда происходит САБ, генерить два рапорта, рассылать
     всем по списку
-[?] Движок: проверить файлы в каталоге admin  на  наличие  SQL-injection  через
-    глобальные переменные $_POST
-[?] Движок: закрыть дыры в корневом каталоге
-[?] Код сохранения конфигурации
 
 V?
+[?] Движок: проверить файлы в каталоге admin  на  наличие  SQL-injection  через
+    глобальные переменные $_POST
+[?] Код сохранения конфигурации
+[?] Экпедиции - поставить зависимость ТМ от емкости трюма кораблей
 [?] Супернова: Удержание на обломках
 [?] Супернова: Сбор ресурсов флотом, если есть разработчики
 [?] Кэширование чата (XCache). Сброс 10 последних одним инсертом.
