Documented changes in CHANGELOG.TXT

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -20,6 +20,9 @@ V0000
 [!] Модули: Модуль Google AdSense (слева внизу под меню, плашка 125х125)
 [!] Безопасность: закрыты все обнаруженные дыры в безопасности (SQL-injection
     через параметры страницы) на страницах, доступных пользователям.
+[!] Альянсы:  Полностью  переписан  модуль  управления  Альянсами.   Уменьшено
+    количество  прав,  оптимизирован  и  переписан  код,  уменьшено  количество
+    запросов к БД
 
 [+] Админка/Баннерилка: Полностью переписан код. Добавлена возможность включить
     РО при бане. При разбане режим РО остается, но разрешается  из  него  выйти
