--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -20,16 +20,16 @@ V0000
 [!] Модули: Модуль Google AdSense (слева внизу под меню, плашка 125х125)
 [!] Безопасность: закрыты все обнаруженные дыры в безопасности (SQL-injection
     через параметры страницы) на страницах, доступных пользователям.
-[!] Альянсы:  Полностью  переписан  модуль  управления  Альянсами.   Уменьшено
-    количество  прав,  оптимизирован  и  переписан  код,  уменьшено  количество
-    запросов к БД
+[!] Альянсы: Полностью переписан модуль  управления  Альянсами.  Убраны  лишние
+    права, оптимизирован и переписан код, уменьшено количество  запросов  к  БД
 
 [+] Админка/Баннерилка: Полностью переписан код. Добавлена возможность включить
     РО при бане. При разбане режим РО остается, но разрешается  из  него  выйти
 [+] Админка/ТМ: с нуля написана страница добавления/удаления  ТМ  пользователям
 [+] Админка/Ошибки: переработан список ошибок. Добавлена возможность  сохранять
     в таблице ошибок backtrace. Добавлена возможность просматривать подробности
-    о каждой ошибке на отдельной странице
+    о каждой ошибке на отдельной странице. Добавлена новая таблица отдельно для
+    предупреждений - багоюзах итд
 [+] Интерфейс/Почта: Оптимизированы запросы к БД. Добавлены индексы  к  таблице
     messages. Добавлена возможность просмотра  отправленных  сообщений  (только
     тех, которые не удалил адресат)
@@ -38,16 +38,16 @@ V0000
     вынесены PHP-файлы из каталога scripts в соответствующие места
 
 [@] Интерфейс/Обзор: Переработана страница "Обзор планеты"
-  1. По умолчанию статистика игрока теперь всегда видна
-  2. Очки/Рейды теперь пишутся в две колонки, а не в отдельные таблицы, как раньше
-  3. Подробности о планете теперь сворачиваются/разворачиваются
-  4. Статус строительства и исследований перенесен под флоты
-  5. Исправил ошибку - были поменяны местами метки для Опыта и Уровня Экономики
-  6. Количество занятых и свободных секторов вынес на индикатор заполненности планеты
-  7. Добавлена очередь ангара на страницу обзора
-  В целом, экран обзора стал компактнее и информативнее
+    1. По умолчанию статистика игрока теперь всегда видна
+    2. Очки/Рейды теперь пишутся в две колонки, а не в отдельные таблицы, как раньше
+    3. Подробности о планете теперь сворачиваются/разворачиваются
+    4. Статус строительства и исследований перенесен под флоты
+    5. Исправил ошибку - были поменяны местами метки для Опыта и Уровня Экономики
+    6. Количество занятых и свободных секторов вынес на индикатор заполненности планеты
+    7. Добавлена очередь ангара на страницу обзора
+    В целом, экран обзора стал компактнее и информативнее
 [@] Интерфейс/Строительство: На  странице  строительства  видны  боевые  данные
-    кораблей и обороны
+    кораблей и обороны (броня/щиты/оружие)
 [@] Интерфейс/Альянсы:  Теперь  по  клику  на  координатах  участника  альянса
     работает переход в его систему
 [@] Интерфейс/Меню: добавлен пункт меню "Закладки" - ссылка на fleetshortcuts.php
@@ -56,7 +56,6 @@ V0000
 [@] Интерфейс: Изменены темплейты страницы регистрации и логина
 [@] Другие усовершенствования
 
-[~] fleet.php: Поправлено использование имен переменных в запросах
 [~] Движок: Корректное отображение количества пользователей
 [~] Движок: Почищен корневой каталог - все неиспользуемые файлы убраны
 [~] Движок/Безопасность:   проверил   файлы   в    каталогах    includes    и
@@ -73,15 +72,13 @@ V0000
 
 [%] Рынок: Исправлен глюк с потерей ресурсов: если во время  обмена  количество
     ресурсов на планете изменялось, то оно перезаписывалось результатом обмена
-[%] Удаляем долетевшие флоты (флоты с отрицательным временем подлета)
-[%] Пофикшен баг, не дававший удалить альянс
 [%] Множество мелких багфиксов и исправлений
 
 [?] Автоматическое обновление статистики
-[?] Доработать функцию $debug->warning()
 [?] Отрицательные ресурсы при отправке флота со страницы галактики - _errors "Player have negative resources"
 [?] Duplicate Report ID - когда происходит САБ, генерить два рапорта, рассылать
     всем по списку
+[?] Движок: alliance.php - переписать!
 
 V?
 [?] Движок: проверить файлы в каталоге admin  на  наличие  SQL-injection  через
@@ -113,7 +110,6 @@ V?
 [?] Губернаторы + офицеры => наемники
 [?] Интерфейс: позаменять везде 'd/m/Y h:i:s' на прописанное в конфиге
 [?] Движок: functions/PadaGalaxy.php - пересмотреть код
-[?] Движок: alliance.php - переписать!
 [?] Движок: объединить DefensesBuildingPage.php и FleetBuildingPage.php
 [?] Не работает константа HIDE_1st_FROM_STATS - должна скрывать юзера 1 (админов?)
 [?] Движок: Почистить каталог language
@@ -123,7 +119,7 @@ V?
 [?] Движок: Почистить каталог includes
 [?] Движок: fleetback.php -> fleet.php
 [?] Движок: infos.php - разбить на подпроцедуры
-[?] Движок: fleet.php - разбить на подпроцедуры или переписать
+[?] Движок: fleet.php - переписать
 [?] Интерфейс, RPG: Make empire work only with Emperor
 [?] Интерфейс: отдельная таблица для текстовых материалов с поддержкой BBCode
 [?] Интерфейс: credit.php
