CHANGELOG editing; code clearing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -84,6 +84,7 @@ V?
 [?] Движок: проверить файлы в каталоге admin  на  наличие  SQL-injection  через
     глобальные переменные $_POST
 [?] Код сохранения конфигурации
+[?] Ракеты: использовать таблиц флотов
 [?] Экпедиции - поставить зависимость ТМ от емкости трюма кораблей
 [?] Супернова: Удержание на обломках
 [?] Супернова: Сбор ресурсов флотом, если есть разработчики
