Almost finished rewrote of Combat Simulator. Fixed bug in calculateAttack caused by procedure's param which are multidimensional array by reference

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -13,8 +13,7 @@ V0000
 [!] Боевка: альтернативная версия боевого движка - рабочие САБы, новая  система
     расчета боя, унифицированный код между обсчетом боя,  уничтожением  луны  и
     симулятором, частичный возврат ресурсов от обороны оптимизированый код итд.
-    Кроме того, можно давать ссылки на результаты симулятора! Подробнее  -  см.
-    readme.txt
+[!] Симулятор боя: почти полностью переписан
 [!] Ролевая система: Переписана система начисления опыта/ТМ
 [!] Модули: Полноценный модуль новостей
 [!] Модули: Модуль Google AdSense (слева внизу под меню, плашка 125х125)
