BUD: Full rewrite of Buddy/Friends system

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -15,12 +15,17 @@ V0000
     симулятором, частичный возврат ресурсов от обороны оптимизированый код итд.
 [!] Симулятор боя: почти полностью переписан
 [!] Ролевая система: Переписана система начисления опыта/ТМ
-[!] Модули: Полноценный модуль новостей
+[!] Интерфейс/Новости: Полноценный модуль новостей
 [!] Модули: Модуль Google AdSense (слева внизу под меню, плашка 125х125)
 [!] Безопасность: закрыты все обнаруженные дыры в безопасности (SQL-injection
     через параметры страницы) на страницах, доступных пользователям.
 [!] Альянсы: Полностью переписан модуль  управления  Альянсами.  Убраны  лишние
     права, оптимизирован и переписан код, уменьшено количество  запросов  к  БД
+[!] Друзья: Полностью переписан модуль "Друзей"
+[!] Админка/Статистика:  Полностью  переписан  модуль  обновления  статистики.
+    Переписаны запросы. Скорость работы возросла  в  несколько  раз.  Добавлена
+    возможность  автоматического  обновления  (настройка  пока   только   через
+    конфиг-файл)
 
 [+] Админка/Баннерилка: Полностью переписан код. Добавлена возможность включить
     РО при бане. При разбане режим РО остается, но разрешается  из  него  выйти
@@ -64,8 +69,6 @@ V0000
     через глобальные переменные $_GET и $_POST
 [~] Движок/Безопасность:  проверил  файлы  в   каталоге   admin   на   наличие
     SQL-injection  через глобальные переменные $_GET
-[~] Админка/Статистика: Почти полностью переписан модуль обновления статистики.
-    Переписаны запросы. Скорость работы возросла в несколько раз
 [~] Движок/Быстродействие: Поддержка xCache (только в новом коде!)
 [~] Другие изменения в движке
 
@@ -73,11 +76,9 @@ V0000
     ресурсов на планете изменялось, то оно перезаписывалось результатом обмена
 [%] Множество мелких багфиксов и исправлений
 
-[?] Автоматическое обновление статистики
 [?] Отрицательные ресурсы при отправке флота со страницы галактики - _errors "Player have negative resources"
 [?] Duplicate Report ID - когда происходит САБ, генерить два рапорта, рассылать
     всем по списку
-[?] Движок: alliance.php - переписать!
 
 V?
 [?] Движок: проверить файлы в каталоге admin  на  наличие  SQL-injection  через
