STA: Removing some debug info in autoupdater. Changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -25,7 +25,7 @@ V0000
 [!] Админка/Статистика:  Полностью  переписан  модуль  обновления  статистики.
     Переписаны запросы. Скорость работы возросла  в  несколько  раз.  Добавлена
     возможность  автоматического  обновления  (настройка  пока   только   через
-    конфиг-файл)
+    конфиг-файл). Автоматическое обновление статистики по расписанию через AJAX
 
 [+] Админка/Баннерилка: Полностью переписан код. Добавлена возможность включить
     РО при бане. При разбане режим РО остается, но разрешается  из  него  выйти
