GAL: Intermediate commit - moving all HTML code from PHP to TPL files

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -70,6 +70,12 @@ V0000
 [~] Движок/Безопасность:  проверил  файлы  в   каталоге   admin   на   наличие
     SQL-injection  через глобальные переменные $_GET
 [~] Движок/Быстродействие: Поддержка xCache (только в новом коде!)
+[~] Движок/Темплейты: Теперь в темплейтах можно указывать  префикс  "L_"  что
+    бы взять переменную из массива $lang и не нужно целиком передавать в массив
+    $lang  в  процедуру  разбора  темплейтов.   Так   же   можно   использовать
+    локализованные значения в одномерных массивах. Например, $lang['tech'][401]
+    в темплейте превратится в {L_tech[401]}. Поддерживаются  так  же  строковые
+    индексы массивов
 [~] Другие изменения в движке
 
 [%] Рынок: Исправлен глюк с потерей ресурсов: если во время  обмена  количество
