ECO/MRK: Finished Scraper. Some adjustments to Resource Trader

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -28,6 +28,8 @@ V0000
     конфиг-файл). Автоматическое обновление статистики по расписанию через AJAX
 [!] Движок/Интерфейс: Добавлен движок рендеринга темплейтов от  phpBB3.  Движок
     доработан до обратной совместимости с темплейтами XNova
+[!] Экономика/Черный рынок: Полностью  переписан  Черный  Рынок.  Теперь  можно
+    менять ТМ на ресурсы
 
 [+] Админка/Баннерилка: Полностью переписан код. Добавлена возможность включить
     РО при бане. При разбане режим РО остается, но разрешается  из  него  выйти
