SYS: Removed all references to table `lunas`

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -86,6 +86,8 @@ V0000
     ресурсов на планете изменялось, то оно перезаписывалось результатом обмена
 [%] Множество мелких багфиксов и исправлений
 
+[?] Удалить current_luna FROM users
+[?] Удалить таблицу lunas
 [?] Отрицательные ресурсы при отправке флота со страницы галактики - _errors "Player have negative resources"
 [?] Duplicate Report ID - когда происходит САБ, генерить два рапорта, рассылать
     всем по списку
