DOC: Some changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -44,6 +44,14 @@ V0000
 [+] Интерфейс: Переработана система генерации баннеров/юзербаров. Унифицированы
     процедуры их генерации, слиты в один файл  процедур  и  один  файл-враппер,
     вынесены PHP-файлы из каталога scripts в соответствующие места
+[+] Интерфейс/Вселенная:   Серьезно   переработан   код   "Вселенной"   (бывш.
+    "Галактика"). Шаблоны вытащены из кода и  перенесены  в  TPL-файл.  Поп-апы
+    (инфо о планетах, лунах итд)  вынесены  в  отдельные  JS-процедуры,  что  в
+    отдельных случаях позволило уменьшить финальный размер страницы  в  два-три
+    раза, а количество запросов к БД снизить  от  двух  до  десяти  (!)  раз  -
+    особенно  в  системе,  густо  заселенной  одним  игроком.  В  целом   новая
+    "Вселенная" существенно меньше грузит сервер и работает на клиенте  гораздо
+    быстрее.
 
 [@] Интерфейс/Обзор: Переработана страница "Обзор планеты"
     1. По умолчанию статистика игрока теперь всегда видна
@@ -86,13 +94,15 @@ V0000
     ресурсов на планете изменялось, то оно перезаписывалось результатом обмена
 [%] Множество мелких багфиксов и исправлений
 
-[?] Удалить current_luna FROM users
-[?] Удалить таблицу lunas
 [?] Отрицательные ресурсы при отправке флота со страницы галактики - _errors "Player have negative resources"
 [?] Duplicate Report ID - когда происходит САБ, генерить два рапорта, рассылать
     всем по списку
 
 V?
+[?] Скрипт инсталляции
+[?] Удалить current_luna FROM users
+[?] Удалить таблицу lunas
+[?] Интеграция с phpBB3
 [?] Движок: проверить файлы в каталоге admin  на  наличие  SQL-injection  через
     глобальные переменные $_POST
 [?] Код сохранения конфигурации
@@ -114,7 +124,6 @@ V?
     на то, следует ли передавать флот дальше в подпроцедуры обработки
 [?] BE_attackFleetFill.php: Нужна ли полная информация о флотах?
 [?] Интерфейс: informations.php - выводить информацию о сервере: скорости итд
-[?] Модуль "черного рынка"
 [?] Черный рынок: Банкир  и  Ростовщик.  Банкир  позволяет  вложить  денег  под
     отрицательный процент. Ростовщик - занять денег.
 [?] Перки
@@ -146,6 +155,4 @@ V?
     http://ua2.php.net/manual/en/pdo.connections.php
 [?] Поддержка мультивселенных
 [?] Скин для ПДА
-[?] Интеграция с phpBB3
-[?] Скрипт инсталляции
 [?] Модульная система
