--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -29,7 +29,9 @@ V0000
 [!] Движок/Интерфейс: Добавлен движок рендеринга темплейтов от  phpBB3.  Движок
     доработан до обратной совместимости с темплейтами XNova
 [!] Экономика/Черный рынок: Полностью  переписан  Черный  Рынок.  Теперь  можно
-    менять ТМ на ресурсы
+    менять ТМ  на  ресурсы  (Торговец  Ресурсами),  продавать  несколько  типов
+    кораблей за одну транзакцию (Скупщик  флота).  Так  же  добавлен  "Продавец
+    кораблей", где можно выкупить ранее кем-то проданные корабли
 
 [+] Админка/Баннерилка: Полностью переписан код. Добавлена возможность включить
     РО при бане. При разбане режим РО остается, но разрешается  из  него  выйти
@@ -90,8 +92,6 @@ V0000
     индексы массивов
 [~] Другие изменения в движке
 
-[%] Рынок: Исправлен глюк с потерей ресурсов: если во время  обмена  количество
-    ресурсов на планете изменялось, то оно перезаписывалось результатом обмена
 [%] Множество мелких багфиксов и исправлений
 
 [?] Отрицательные ресурсы при отправке флота со страницы галактики - _errors "Player have negative resources"
