DOC: Changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -57,18 +57,22 @@ V0000
 
 [@] Интерфейс/Обзор: Переработана страница "Обзор планеты"
     1. По умолчанию статистика игрока теперь всегда видна
-    2. Очки/Рейды теперь пишутся в две колонки, а не в отдельные таблицы, как раньше
+    2. Очки/Рейды теперь пишутся в две колонки, а не в отдельные  таблицы,  как
+       раньше
     3. Подробности о планете теперь сворачиваются/разворачиваются
     4. Статус строительства и исследований перенесен под флоты
-    5. Исправил ошибку - были поменяны местами метки для Опыта и Уровня Экономики
-    6. Количество занятых и свободных секторов вынес на индикатор заполненности планеты
+    5. Исправил ошибку -  были  поменяны  местами  метки  для  Опыта  и  Уровня
+       Экономики
+    6. Количество занятых и свободных секторов вынес на индикатор заполненности
+       планеты
     7. Добавлена очередь ангара на страницу обзора
     В целом, экран обзора стал компактнее и информативнее
 [@] Интерфейс/Строительство: На  странице  строительства  видны  боевые  данные
     кораблей и обороны (броня/щиты/оружие)
 [@] Интерфейс/Альянсы:  Теперь  по  клику  на  координатах  участника  альянса
     работает переход в его систему
-[@] Интерфейс/Меню: добавлен пункт меню "Закладки" - ссылка на fleetshortcuts.php
+[@] Интерфейс/Меню:   добавлен   пункт   меню   "Закладки"   -   ссылка    на
+    fleetshortcuts.php
 [@] Чат: сообщения админа теперь выделяются пурпурным цветом, что  бы  выделить
     их среди сообщений обычных пользователей
 [@] Интерфейс: Изменены темплейты страницы регистрации и логина
@@ -94,14 +98,15 @@ V0000
 
 [%] Множество мелких багфиксов и исправлений
 
-[?] Отрицательные ресурсы при отправке флота со страницы галактики - _errors "Player have negative resources"
+[?] Отрицательные ресурсы при отправке флота со страницы  галактики  -  _errors
+    "Player have negative resources"
 [?] Duplicate Report ID - когда происходит САБ, генерить два рапорта, рассылать
     всем по списку
 
 V?
 [?] Скрипт инсталляции
-[?] Удалить current_luna FROM users
-[?] Удалить таблицу lunas
+[?] Удалить поле `current_luna` из таблицы `users`
+[?] Удалить таблицу `lunas`
 [?] Интеграция с phpBB3
 [?] Движок: проверить файлы в каталоге admin  на  наличие  SQL-injection  через
     глобальные переменные $_POST
@@ -115,7 +120,6 @@ V?
 [?]  Админка/Список  ошибок:  добавить  листание  -  PHP  умирает  при  большом
     количестве ошибок - выдает белую страницу
 [?] Интерфейс: Капча - captcha.php
-[?] Поддержка xCache для конфигурации
 [?] Боевка: Движок совместимый с oGame (скорострел)
 [?] Переработать систему оружия и боя: ракеты, кинетическое, энергетическое
 [?] Разобраться в менеджере и подпроцедурах управления флотами, что бы избежать
