INT/OVR: Edits some misc info

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -57,15 +57,17 @@ V0000
 
 [@] Интерфейс/Обзор: Переработана страница "Обзор планеты"
     1. По умолчанию статистика игрока теперь всегда видна
-    2. Очки/Рейды теперь пишутся в две колонки, а не в отдельные  таблицы,  как
-       раньше
-    3. Подробности о планете теперь сворачиваются/разворачиваются
-    4. Статус строительства и исследований перенесен под флоты
+    2. Очки/Рейды теперь пишутся болкк компактно.  Показывается  информация  об
+       уровне за рейды
+    3. Список планет теперь  справа  от  данных  главной  планеты.  Для  каждой
+       планеты указывается время строительства - если есть
+    4. Статус строительства и исследований перенесен под флоты, добавлен статус
+       верфи
     5. Исправил ошибку -  были  поменяны  местами  метки  для  Опыта  и  Уровня
        Экономики
     6. Количество занятых и свободных секторов вынес на индикатор заполненности
        планеты
-    7. Добавлена очередь ангара на страницу обзора
+    7. Все статусы теперь используют новую библиотеку таймеров sn_timer.js
     В целом, экран обзора стал компактнее и информативнее
 [@] Интерфейс/Строительство: На  странице  строительства  видны  боевые  данные
     кораблей и обороны (броня/щиты/оружие)
@@ -94,6 +96,8 @@ V0000
     локализованные значения в одномерных массивах. Например, $lang['tech'][401]
     в темплейте превратится в {L_tech[401]}. Поддерживаются  так  же  строковые
     индексы массивов
+[~] Движок/Интерфейс: Написана с нуля библиотека таймеров js/sn_timer.js. Формат
+    и примеры использования - см. в файле библиотеки
 [~] Другие изменения в движке
 
 [%] Множество мелких багфиксов и исправлений
